Closes Previous Instances